--- a/landing-pages/fabrikator-outfund.yml
+++ b/landing-pages/fabrikator-outfund.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "fabrikator_dark2"
+partnerLogo: "fabrikator"
 partnerLogoCard: ""
 
 colors: {
