--- a/landing-pages/mpsh1.yml
+++ b/landing-pages/mpsh1.yml
@@ -8,16 +8,16 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "mpsh-logo1"
-partnerLogoCard: "mpsh-card1"
+partnerLogoCard: ""
 
 colors: {
-    theme: "#00A3D7",
+    theme: "#5AB18A",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "#00A3D7" },
+    card: { bg: "#5AB18A", font: "#F2F6FA", elements: "#FFFFFF" },
     font:
       {
         heading: "#0C2542",
@@ -25,18 +25,18 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#00A3D7", text: "#fff" },
-    iconSection: { icon: "#00A3D7", bg: "#F2F6FA" },
-    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
+    button: { bg: "#5AB18A", text: "#fff" },
+    iconSection: { icon: "#5AB18A", bg: "#F2F6FA" },
+    darkSection: { bg: "#5AB18A", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For Amazon Businesses" },
 
-    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As Amazon experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Superhero Capital offers a new way to help you fund your Amazon brand with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -81,8 +81,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, ___ Captial/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "___ Finance offers a new way to help you fund your ___ brand.",
+    description: "Powered by Outfund, Superhero Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue-based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "Superhero Capital offers a new way to help you fund your online business.",
   }
 
 sixth:
@@ -90,8 +90,8 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
-        "Have been trading for 6 months +",
+        "Sell products online",
+        "Have been trading for 6 months+",
         "Earn $10K+ monthly revenue",
       ],
     button: "Get funded",
