--- a/landing-pages/zendrop.yml
+++ b/landing-pages/zendrop.yml
@@ -11,31 +11,32 @@ partnerLogo: "zendrop"
 partnerLogoCard: "zendrop"
 
 colors: {
-    theme: "#6857ab",
+    theme: "#6857AB",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#f6f5fd", font: "#6857ab", elements: "#6857ab" },
+    card: { bg: "#6857AB", font: "#F2F6FA", elements: "#FFFFFF" },
     font:
       {
-        heading: "#000",
-        inverseHeading: "#0D2C4F",
-        body: "#222",
-        inverseBody: "#ccc",
+        heading: "#0C2542",
+        inverseHeading: "#F2F6FA",
+        body: "#1C3654",
+        inverseBody: "#F2F6FA",
       },
-    button: { bg: "#FF766B", text: "#fff" },
-    iconSection: { icon: "#FF766B", bg: "#fafafa" },
-    darkSection: { bg: "#fafafa", button: { bg: "#FF766B", text: "#fff" } },
+    button: { bg: "#6857AB", text: "#fff" },
+    iconSection: { icon: "#6857AB", bg: "#F2F6FA" },
+    darkSection: { bg: "#6857AB", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
 first:
   {
-    title: { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+    title:
+      { firstLine: "Revenue Based Finance", secondLine: "For Amazon Businesses" },
 
-    description: "As eCommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Zendrop Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As Amazon experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Superhero Capital offers a new way to help you fund your Amazon brand with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -80,8 +81,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Zendrop Captial can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "Zendrop Capital offers a new way to help you fund your eCommerce brand.",
+    description: "Powered by Outfund, Superhero Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue-based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "Superhero Capital offers a new way to help you fund your online business.",
   }
 
 sixth:
@@ -90,7 +91,7 @@ sixth:
     list:
       [
         "Sell products online",
-        "Have been trading for 6 months +",
+        "Have been trading for 6 months+",
         "Earn $10K+ monthly revenue",
       ],
     button: "Get funded",
