--- a/landing-pages/template-active.yml
+++ b/landing-pages/template-active.yml
@@ -11,13 +11,13 @@ partnerLogo: "Outfund-dark"
 partnerLogoCard: "Outfund-light"
 
 colors: {
-    theme: "#Faf",
+    theme: "#1A65BA",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "", text: "#fff" },
-    iconSection: { icon: "", bg: "#F2F6FA" },
-    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
+    button: { bg: "#1A65BA", text: "#fff" },
+    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
