--- a/landing-pages/mpsh1.yml
+++ b/landing-pages/mpsh1.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "mpsh-logo1"
-partnerLogoCard: "mpsh-card1"
+partnerLogoCard: ""
 
 colors: {
     theme: "#5AB18A",
