--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "shipmonk"
-partnerLogoCard: "shipmonk"
+partnerLogo: "shipmonk_sized"
+partnerLogoCard: "shipmonk_sized"
 
 colors: {
     theme: "##eeeeed",
