--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -34,7 +34,7 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
 
     description: "As eCommerce experts, we know that having the capital to pay for inventory, logistics, or marketing is a huge barrier to growth for any brand. Shipmonk Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
