--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "shipmonk2"
+partnerLogo: "shipmonk_best"
 partnerLogoCard: "Outfund-light"
 
 colors: {
