--- a/landing-pages/owd.yml
+++ b/landing-pages/owd.yml
@@ -25,9 +25,9 @@ colors: {
         body: "#222",
         inverseBody: "#ccc",
       },
-    button: { bg: "#ff6628", text: "#000" },
-    iconSection: { icon: "#FF766B", bg: "#fafafa" },
-    darkSection: { bg: "#fafafa", button: { bg: "#FF766B", text: "" } },
+    button: { bg: "#0D2C4F", text: "#000" },
+    iconSection: { icon: "#0D2C4F", bg: "#fafafa" },
+    darkSection: { bg: "#0D2C4F", button: { bg: "#FF766B", text: "" } },
   }
 
 # Content
