--- a/landing-pages/Fingate.yml
+++ b/landing-pages/Fingate.yml
@@ -1,6 +1,6 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: fingate2
+slug: fingate
 
 # Set this to true when you want to publish the page
 published: true
@@ -34,9 +34,9 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
 
-    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As eCommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Fingate Finance (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -81,8 +81,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, ___ Captial/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "___ Finance offers a new way to help you fund your ___ brand.",
+    description: "Powered by Outfund, Fingate Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "Fingate Finance offers a new way to help you fund your eCommerce brand.",
   }
 
 sixth:
@@ -90,7 +90,7 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
+        "Sell products online",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
