--- a/landing-pages/finalproduct.yml
+++ b/landing-pages/finalproduct.yml
@@ -34,9 +34,9 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
 
-    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As product development experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -81,8 +81,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, ___ Captial/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "___ Finance offers a new way to help you fund your ___ brand.",
+    description: "Outfund is here to help your business achieve its full potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "Outfund  offers a new way to help you fund your growing brand.",
   }
 
 sixth:
@@ -90,7 +90,7 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
+        "Sell products or services online",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
