--- a/landing-pages/finalproduct.yml
+++ b/landing-pages/finalproduct.yml
@@ -27,7 +27,7 @@ colors: {
       },
     button: { bg: "#FBB000", text: "#fff" },
     iconSection: { icon: "#FBB000", bg: "#F2F6FA" },
-    darkSection: { bg: "#EBECF0", button: { bg: "#FBB000", text: "#000" } },
+    darkSection: { bg: "#000", button: { bg: "#FBB000", text: "#000" } },
   }
 
 # Content
