--- a/landing-pages/finalproduct.yml
+++ b/landing-pages/finalproduct.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "finalproduct_logo2"
+partnerLogo: "finalproduct4"
 partnerLogoCard: "Outfund-light"
 
 colors: {
