--- a/landing-pages/drive-digital.yml
+++ b/landing-pages/drive-digital.yml
@@ -7,17 +7,18 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "drive-digital-logo"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "drive-digital"
+partnerLogoCard: "drive-digital"
+logoHeight: "40px"
 
 colors: {
     theme: "#34E19F",
     page: "#fff",
 
-    navbarBg: "", # If nothing present, page color will be used
+    navbarBg: "#1a0b28", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#34E19F", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#1a0b28", font: "#F2F6FA", elements: "#34E19F" },
     font:
       {
         heading: "#0C2542",
@@ -34,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
