--- a/landing-pages/finalproduct.yml
+++ b/landing-pages/finalproduct.yml
@@ -7,8 +7,9 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "finalproduct4"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "finalproduct"
+partnerLogoCard: "finalproduct-card"
+logoHeight: "48px"
 
 colors: {
     theme: "#FBB000",
@@ -34,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Growing Businesses",
+      },
 
     description: "As product development experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our partner Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
