--- a/landing-pages/fingate.yml
+++ b/landing-pages/fingate.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "fingate"
-partnerLogoCard: "Outfund-light"
+partnerLogoCard: "fingate-card"
 
 colors: {
     theme: "#ED702D",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#ED702D", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#ED702D", font: "#F2F6FA", elements: "" },
     font:
       {
         heading: "#0C2542",
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As eCommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Fingate Finance (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
