--- a/landing-pages/gc-hub.yml
+++ b/landing-pages/gc-hub.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "gc-hub-logo"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "gc-hub"
+partnerLogoCard: "gc-hub-card"
 
 colors: {
     theme: "#A3D55F",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#A3D55F", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#A3D55F", font: "#F2F6FA", elements: "#726866" },
     font:
       {
         heading: "#0C2542",
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
