--- a/landing-pages/mpsh1.yml
+++ b/landing-pages/mpsh1.yml
@@ -7,8 +7,9 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "mpsh-logo1"
-partnerLogoCard: ""
+partnerLogo: "mpsh-logo"
+partnerLogoCard: "mpsh-card"
+logoHeight: "64px"
 
 colors: {
     theme: "#5AB18A",
@@ -17,7 +18,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#5AB18A", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#5AB18A", font: "#F2F6FA", elements: "#DBE8BB" },
     font:
       {
         heading: "#0C2542",
@@ -34,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Amazon Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Amazon Businesses",
+      },
 
     description: "As Amazon experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Superhero Capital offers a new way to help you fund your Amazon brand with funding from $10K to $3M.",
 
