--- a/landing-pages/nudge.yml
+++ b/landing-pages/nudge.yml
@@ -7,8 +7,9 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "nudge-logo"
+partnerLogo: "nudge"
 partnerLogoCard: "Outfund-light"
+logoHeight: "64px"
 
 colors: {
     theme: "#3F6BC8",
@@ -34,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
