--- a/landing-pages/river-city-labs.yml
+++ b/landing-pages/river-city-labs.yml
@@ -7,17 +7,18 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "river-city-labs-logo"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "river-city-labs"
+partnerLogoCard: "river-city-labs"
+logoHeight: "64px"
 
 colors: {
-    theme: "#0097A7",
-    page: "#fff",
+    theme: "#3DC69C",
+    page: "#fafafa",
 
-    navbarBg: "", # If nothing present, page color will be used
+    navbarBg: "#fff", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#0097A7", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#fff", font: "#0C2542", elements: "#1CB9C8" },
     font:
       {
         heading: "#0C2542",
@@ -34,7 +35,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
     description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
