--- a/landing-pages/shipmonk.yml
+++ b/landing-pages/shipmonk.yml
@@ -7,17 +7,18 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "shipmonk_best"
-partnerLogoCard: "Outfund-light"
+partnerLogo: "shipmonk"
+partnerLogoCard: "shipmonk"
+logoHeight: "48px"
 
 colors: {
     theme: "#53A753",
-    page: "#fff",
+    page: "#fafafa",
 
-    navbarBg: "", # If nothing present, page color will be used
+    navbarBg: "#fff", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#53A753", font: "#F2F6FA", elements: "#000" },
+    card: { bg: "#fff", font: "#0C2542", elements: "#3AD98A" },
     font:
       {
         heading: "#0C2542",
@@ -34,10 +35,11 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
-
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
     description: "As eCommerce experts, we know that having the capital to pay for inventory, logistics, or marketing is a huge barrier to growth for any brand. Shipmonk Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
-
     button: "Get funded",
   }
 second:
