--- a/landing-pages/zendrop.yml
+++ b/landing-pages/zendrop.yml
@@ -34,9 +34,9 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Amazon Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
 
-    description: "As Amazon experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Superhero Capital offers a new way to help you fund your Amazon brand with funding from $10K to $3M.",
+    description: "As eCommerce experts, we know that having the funds to stay in stock and market your product is a huge barrier to growth for any brand. Zendrop Capital offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -81,8 +81,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Superhero Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue-based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "Superhero Capital offers a new way to help you fund your online business.",
+    description: "Powered by Outfund, Zendrop Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue-based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "Zendrop Capital offers a new way to help you fund your online business.",
   }
 
 sixth:
