--- a/landing-pages/kia-ora.yml
+++ b/landing-pages/kia-ora.yml
@@ -45,7 +45,7 @@ first:
         secondLine: "",
       },
 
-    description: "With [Kia Ora Digital](https://www.kiaoradigital.co.nz/) and Outfund's partnership, securing ad spend can be a problem of the past.",
+    description: "With Kia Ora Digital and Outfund's partnership, securing ad spend can be a problem of the past.",
 
     button: "Get funded",
   }
