--- a/landing-pages/nudge.yml
+++ b/landing-pages/nudge.yml
@@ -40,7 +40,7 @@ first:
         secondLine: "For eCommerce Businesses",
       },
 
-    description: "As Ecommerce experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "At The Nudge Group, we work with global start-ups and scale-ups going through various stages of business growth, so we know that having the capital is a huge barrier to growth for any company. Our partnership with Outfund offers a new way to help you fund your business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
