--- a/landing-pages/nudge.yml
+++ b/landing-pages/nudge.yml
@@ -37,7 +37,7 @@ first:
     title:
       {
         firstLine: "Revenue Based Finance",
-        secondLine: "For eCommerce Businesses",
+        secondLine: "For Startups",
       },
 
     description: "At The Nudge Group, we work with global start-ups and scale-ups going through various stages of business growth, so we know that having the capital is a huge barrier to growth for any company. Our partnership with Outfund offers a new way to help you fund your business with funding from $10K to $3M.",
