--- a/landing-pages/b360.yml
+++ b/landing-pages/b360.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#0A213B" },
     font:
       {
         heading: "#0C2542",
