--- a/landing-pages/argonapartners.yml
+++ b/landing-pages/argonapartners.yml
@@ -27,21 +27,18 @@ colors: {
         body: "#222",
         inverseBody: "#555",
       },
-    button: { bg: "#547E6F", text: "#fff" },
-    iconSection: { icon: "#FF766B", bg: "#fafafa" },
-    darkSection: { bg: "#fafafa", button: { bg: "#547E6F", text: "#000" } },
+    button: { bg: "#1A65BA", text: "#fff" },
+    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
 first:
   {
     title:
-      {
-        firstLine: "Revenue Based Finance",
-        secondLine: "For eCommerce Businesses",
-      },
+      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
 
-    description: "As funding experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Argona Partners Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -86,8 +83,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Argona Partners Captial can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "Argona Partners Capital offers a new way to help you fund your online brand.",
+    description: "Powered by Outfund, ___ Captial/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "___ Finance offers a new way to help you fund your ___ brand.",
   }
 
 sixth:
@@ -95,7 +92,7 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products online",
+        "Sell products on ___",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
