--- a/landing-pages/argonapartners.yml
+++ b/landing-pages/argonapartners.yml
@@ -13,13 +13,13 @@ partnerLogoCard: "argona-card"
 logoHeight: "40px"
 
 colors: {
-    theme: "#537E6F",
+    theme: "#354F49",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#282D2B", font: "#fff", elements: "#6DBC91" },
+    card: { bg: "#282D2B", font: "#fff", elements: "#354F49" },
     font:
       {
         heading: "#000",
@@ -36,9 +36,9 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses" },
 
-    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As funding experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Argona Partners Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -83,8 +83,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, ___ Captial/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "___ Finance offers a new way to help you fund your ___ brand.",
+    description: "Powered by Outfund, Argona Captial can help your business achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "Argona Partners Capital  offers a new way to help you fund your online brand.",
   }
 
 sixth:
@@ -92,7 +92,7 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
+        "Sell products or services online",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
