--- a/landing-pages/argonapartners.yml
+++ b/landing-pages/argonapartners.yml
@@ -27,8 +27,8 @@ colors: {
         body: "#222",
         inverseBody: "#555",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    button: { bg: "#354F49", text: "#fff" },
+    iconSection: { icon: "#354F49", bg: "#F2F6FA" },
     darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
