--- a/landing-pages/argonapartners.yml
+++ b/landing-pages/argonapartners.yml
@@ -25,7 +25,7 @@ colors: {
         heading: "#000",
         inverseHeading: "#000",
         body: "#222",
-        inverseBody: "#fff",
+        inverseBody: "#000",
       },
     button: { bg: "#354F49", text: "#fff" },
     iconSection: { icon: "#354F49", bg: "#F2F6FA" },
