--- a/landing-pages/argonapartners.yml
+++ b/landing-pages/argonapartners.yml
@@ -83,8 +83,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Argona Captial can help your business achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
-    statement: "Argona Partners Capital  offers a new way to help you fund your online brand.",
+    description: "Powered by Outfund, Argona Partners Captial can help your business achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "Argona Partners Capital offers a new way to help you fund your online brand.",
   }
 
 sixth:
