--- a/landing-pages/fundstory.yml
+++ b/landing-pages/fundstory.yml
@@ -90,8 +90,8 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
-        "Have been trading for 6 months +",
+        "Sell products or software online",
+        "Have been trading for 6 months+",
         "Earn $10K+ monthly revenue",
       ],
     button: "Get funded",
