--- a/landing-pages/total-processing.yml
+++ b/landing-pages/total-processing.yml
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Online Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Online Businesses",
+      },
 
     description: "As payment experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Total Processing Capital (powered by Outfund) offers a new way to help you fund your online business with funding from £10K to £2M.",
 
