--- a/landing-pages/birchal.yml
+++ b/landing-pages/birchal.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "birchal"
+partnerLogo: "birchal-new"
 partnerLogoCard: "birchal-card"
 
 colors: {
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Growing Businesses",
+      },
 
     description: "As growth experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our capital solution (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
 
