--- a/landing-pages/Das.yml
+++ b/landing-pages/Das.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Das-logo"
-partnerLogoCard: "Das-logo"
+partnerLogo: "Das-logo1"
+partnerLogoCard: "Das-logo1"
 
 colors: {
     theme: "#DE4827",
