--- a/landing-pages/gembah.yml
+++ b/landing-pages/gembah.yml
@@ -39,7 +39,7 @@ first:
         secondLine: "For eCommerce Businesses",
       },
 
-    description: "As manufacturing experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Gembah Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As manufacturing experts, we know that the ability to fund production can be be a daunting ordeal. Volume is the name of the game when it comes to material acquisition; where true savings are only reachable with scale. That’s why Gembah Capital (powered by Outfund) offers a new way to help fund your orders, with funding from $10K to $3M. Bring your cost per unit down now, and multiply earnings in the future, with our revenue based financing option.",
 
     button: "Get funded",
   }
