--- a/landing-pages/dijitally.yml
+++ b/landing-pages/dijitally.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "dijitally"
-partnerLogoCard: "dijitally"
+partnerLogoCard: "Outfund-light"
 
 colors: {
     theme: "#22D3EE",
