--- a/landing-pages/birchal.yml
+++ b/landing-pages/birchal.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "birchal"
-partnerLogoCard: "birchal-card"
+partnerLogoCard: "Outfund-light"
 
 colors: {
     theme: "#1A1ED2",
@@ -35,11 +35,11 @@ first:
   {
     title:
       {
-        firstLine: "Revenue Based Finance",
+        firstLine: "Not Ready for Equity Crowdfunding? <br/> Explore Revenue Based Financing",
         secondLine: "For Growing Businesses",
       },
 
-    description: "As growth experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our capital solution (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "At Birchal, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Whether you're looking to boost your equity crowdfunding campaign or not yet ready to go to the crowd, our partners at Outfund can offer a new way to help you fund your online business with funding from $10k to $3M.",
 
     button: "Get funded",
   }
@@ -61,7 +61,7 @@ third:
       [
         {
           title: "Apply for funding",
-          description: "We analyse your data to make you a tailored offer within 48 hours.",
+          description: "Outfund analyses your data & makes you a tailored offer within 48 hours.",
         },
         {
           title: "Select an offer",
@@ -84,8 +84,8 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, Birchal can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "Birchal Finance offers a new way to help you fund your growing brand.",
+    description: "Outfund can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "Revenue-based financing offers a new way to help you fund your growing brand.",
   }
 
 sixth:
