--- a/landing-pages/birchal.yml
+++ b/landing-pages/birchal.yml
@@ -35,7 +35,7 @@ first:
   {
     title:
       {
-        firstLine: "Not Ready for Equity Crowdfunding? <br/> Explore Revenue Based Financing",
+        firstLine: "Not Ready for Equity Crowdfunding? <br/> <br/> Explore Revenue Based Financing",
         secondLine: "For Growing Businesses",
       },
 
