--- a/landing-pages/birchal.yml
+++ b/landing-pages/birchal.yml
@@ -39,7 +39,7 @@ first:
         secondLine: "For Growing Businesses",
       },
 
-    description: "At Birchal, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. <br/> Whether you're looking to boost your equity crowdfunding campaign or not yet ready to go to the crowd, our partners at Outfund can offer a new way to help you fund your online business with funding from $10k to $3M.",
+    description: "At Birchal, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. <br/> <br/> Whether you're looking to boost your equity crowdfunding campaign or not yet ready to go to the crowd, our partners at Outfund can offer a new way to help you fund your online business with funding from $10k to $3M.",
 
     button: "Get funded",
   }
