--- a/landing-pages/dijitally.yml
+++ b/landing-pages/dijitally.yml
@@ -11,13 +11,13 @@ partnerLogo: "dijitally"
 partnerLogoCard: "Outfund-light"
 
 colors: {
-    theme: "#22D3EE",
+    theme: "#1A65BA",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#FFFFFF" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#22D3EE", text: "#fff" },
-    iconSection: { icon: "#22D3EE", bg: "#F2F6FA" },
-    darkSection: { bg: "#00000", button: { bg: "#22D3EE", text: "#FFF" } },
+    button: { bg: "#1A65BA", text: "#fff" },
+    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
