--- a/landing-pages/dijitally.yml
+++ b/landing-pages/dijitally.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#FFFFFF" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#FFFFFF" },
     font:
       {
         heading: "#0C2542",
@@ -25,7 +25,7 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
+    button: { bg: "#000000", text: "#fff" },
     iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
     darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
