--- a/landing-pages/concise-digital.yml
+++ b/landing-pages/concise-digital.yml
@@ -82,7 +82,7 @@ fifth:
   {
     title: "What We Do",
     description: "Outfund Growth Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "___ Finance offers a new way to help you fund your online brand.",
+    statement: "Revenue Based Finance offers a new way to help you fund your online brand.",
   }
 
 sixth:
@@ -90,7 +90,7 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
+        "Sell products online",
         "Have been trading for 6 months +",
         "Earn $10K+ monthly revenue",
       ],
