--- a/landing-pages/dijitally.yml
+++ b/landing-pages/dijitally.yml
@@ -34,7 +34,7 @@ colors: {
 first:
   {
     title:
-      { firstLine: "test Revenue Based Finance", secondLine: "For Growing Businesses" },
+      { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
 
     description: "As brand experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Our partnership with Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
